@@ -151,7 +151,7 @@ To add a missing function, read: doc/How_to_add_a_missing_function.md
 * CELL -- Returns information about the formatting, location, or contents of a cell - filename info_source implemented in ruby
 * ERROR.TYPE -- Returns a number corresponding to an error type
 * INFO -- Returns information about the current operating environment
-* ISBLANK -- Returns TRUE if the value is blank
+* ISBLANK -- Returns TRUE if the value is blank -- _R_ _C_
 * ISERR -- Returns TRUE if the value is any error value except ##N/A
 * ISERROR -- Returns TRUE if the value is any error value
 * ISEVEN -- Returns TRUE if the number is even
