@@ -98,3 +98,5 @@ require_relative 'excel_functions/substitute'
 require_relative 'excel_functions/lower'
 
 require_relative 'excel_functions/exp'
+
+require_relative 'excel_functions/isblank'
