@@ -1,0 +1,8 @@
+module ExcelFunctions
+  
+  def isblank(a)
+    return true if a == nil
+    false
+  end
+  
+end
