@@ -1,5 +1,7 @@
 # Head
 
+- implemented the ISBLANK function in ruby and C
+
 # 0.2.7 - 2013 January 30th
 
 - implemented the EXP function in ruby and C
